testing off heap regions